# 51area

./: .gitignore  51Area.dsp  51Area.dsw  Area.cpp  CMakeLists.txt  GraphicsEngine.cpp  GraphicsEngine.h  Main.cpp  Main52.cpp  README.md  Settings.cpp  definitions.h  resource.h  scrnsvr.rc
html/: index.htm
